# android-opencl-setup

./: settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/project/timweri/openclsetup/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/project/timweri/openclsetup/: TestOutput.java
app/src/main/res/layout/: activity_test_output.xml  content_test_output.xml
app/src/main/res/values/: strings.xml
app/src/test/java/project/timweri/openclsetup/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openclfilter/: CMakeLists.txt  build.gradle
openclfilter/src/androidTest/java/project/timweri/openclfilter/: ExampleInstrumentedTest.java
openclfilter/src/main/: AndroidManifest.xml
openclfilter/src/main/cpp/: filter.cpp  filter.h  kernel_filter.cl  kernel_vector_addition.cl  opencl_utils.cpp  vector_addition.cpp
openclfilter/src/main/cpp/include/: opencl_utils.h
openclfilter/src/main/java/project/timweri/openclfilter/: OpenCLFilter.java
openclfilter/src/main/res/values/: strings.xml
openclfilter/src/test/java/project/timweri/openclfilter/: ExampleUnitTest.java  OpenCLFilterTest.java
